Added container for variables