@@ -27,3 +27,7 @@ patchPluginXml {
 test {
     useJUnitPlatform()
 }
+
+tasks.runIde {
+    jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+}
